# provn-xrpl-proofs

./: .gitignore  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
provn_xrpl_proofs/: __init__.py  cli.py  client.py  encoding.py  normalizer.py  types.py  validators.py  verifier.py
tests/: conftest.py  test_client_parse.py  test_encoding.py  test_normalizer.py  test_validators.py  test_verifier.py
tests/fixtures/: offer_create.json  payment_failed.json  payment_unvalidated.json  payment_valid.json  payment_with_memo.json
